Исправлено в соответствии с комментариями