@@ -2,23 +2,23 @@ package taskManager;
 
 import task.Task;
 
-import java.util.ArrayList;
+import java.util.LinkedList;
 import java.util.List;
 
 public class InMemoryHistoryManager implements HistoryManager {
-    private final List<Task> historyList = new ArrayList<>();
+    private final List<Task> historyList = new LinkedList<>();
     private static final int MAX_HISTORY_LIST_SIZE = 10;
 
     @Override
     public void add(Task task) {
         if (historyList.size() == MAX_HISTORY_LIST_SIZE) {
-            historyList.remove(0);
+            historyList.removeFirst();
         }
             historyList.add(task);
         }
 
     @Override
     public List<Task> getHistory() {
-        return historyList;
+        return List.copyOf(historyList);
     }
 }
